refactor: update post customer data structure to array
