# backend/api.yaml
@@ -33,7 +33,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Customer'
+                $ref: '#/components/schemas/Customers'
         default:
           description: Unexpected error
           content:
@@ -41,7 +41,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
     post:
-      description: Create a new customer
+      description: Create new customers
       operationId: postCustomer
       tags:
         - Customer
@@ -51,14 +51,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Customer'
+              $ref: '#/components/schemas/Customers'
       responses:
         '200':
           description: Returns the customer created/added
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Customer'
+                $ref: '#/components/schemas/Customers'
         '401':
           description: User not authorised to perform action
           content:
@@ -134,108 +134,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /users:
-    get:
-      description: Return user username, email and token
-      operationId: getUser
-      tags:
-        - User
-      responses:
-        '200':
-          description: Return user username, email and token
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '401':
-          description: User not authorised to perform action
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-    post:
-      description: Create user account
-      operationId: addUser
-      tags:
-        - User
-      requestBody:
-        description: User account to create
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserDetails'
-      responses:
-        '200':
-          description: Return user username, email and token
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /users/login:
-    post:
-      description: Login to user account
-      operationId: userLogin
-      tags:
-        - User
-      requestBody:
-        description: User account to login
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserDetails'
-      responses:
-        '200':
-          description: Return user username, email and token
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /users/{:user}:
-    put:
-      description: Update user account details
-      operationId: userUpdate
-      tags:
-        - User
-      requestBody:
-        description: User account to update
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserDetails'
-      responses:
-        '200':
-          description: Return user username, email and token
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
 components:
   schemas:
     Customer:
@@ -258,30 +156,10 @@ components:
         updatedAt:
           type: string
           format: date-time
-    UserDetails:
-      type: object
-      required:
-        - username
-        - email
-        - password
-      properties:
-        username:
-          type: string
-        email:
-          type: string
-        password:
-          type: string
-          format: password
-    User:
-      type: object
-      properties:
-        username:
-          type: string
-        email:
-          type: string
-        token:
-          type: string
-          description: JWT used to access resources requiring auth
+    Customers:
+      type: array
+      items:
+        $ref: '#/components/schemas/Customer'
     Error:
       type: object
       properties:
